# pydb

./: .cvsignore  .gitignore  AUTHORS  Makefile.am  NEWS  README  THANKS  TODO  autogen.sh  configure.ac  cvs2cl_usermap  python-version.py  setup.py  setup.py.in  site-packages-path.py
Doc/: .cvsignore  .gitignore  Makefile.deps  Makefile.in  pydb.1.in
Doc/commontex/: boilerplate.tex
Doc/html/: index.html
Doc/info/: .cvsignore  .gitignore  Makefile
Doc/lib/: Makefile  hardtodebug.py  lib-ds.tex  lib.tex  libpydb.tex  mymodule.py
Doc/paper-letter/: .cvsignore  .gitignore
Doc/tools/: .cvsignore  getversioninfo  patchlevel.h  py2texi.el
doc/: libpydb.tex
emacs/: .cvsignore  .gitignore  Makefile.am  pydb-test.el  pydb-test.el.in  pydb.el  python-mode.el.diff  test-gud.el
htdocs/: download.html  features.html  index.html  jc.css  pydb.html
pydb/: .cvsignore  .gitignore  Makefile  __init__.py  __init__.py.in  bytecode.py  complete.py  connection.py  disassemble.py  display.py  fns.py  gdb.py.in  info.py  pydb.doc  pydb.py  pydb.py.in  pydbbdb.py  pydbcmd.py  pydbdisp.py  pydbfns.py  pydbsupt.py  remote.py  server.py  set.py  show.py  sighandler.py  subcmd.py  threaddbg.py  threadinfo.py
test/: .cvsignore  .gitignore  .pydbrc.in  Makefile.am  brkpt1.cmd  brkpt1.right  brkpt1t.right  brkpt2-2.3.right  brkpt2.cmd  brkpt2.right  brkpt3.cmd  brkpt3.cmd.in  brkpt3.right  brkpt3.right.in  brkpt3t.right  brkpt3t.right.in  cmdparse.cmd  cmdparse.right  comm1.cmd  comm2.cmd  complete.py.in  connect.py.in  contbug.cmd  contbug.py.in  contbug.right  dbgcall.py  disassem.py.in  except.py.in  exceptbug.py  exceptbug.py.in  fifo_connect.py.in  file-2.5.right  file-2.5.right.in  file.cmd  file.cmd.in  file.py.in  file.right  file.right.in  filebug.cmd  filebug.py  (+76 more)
test/data/: .gitignore  Makefile.am  brkpt1-2.7.right  brkpt1.right  brkpt1t-2.7.right  brkpt1t.right  brkpt2-2.3.right  brkpt2.right  brkpt3-2.5t.right  brkpt3.right  brkpt3t.right  checkline.py  cmdparse.right  contbug.right  dbgcall-2.5.right  dbgcall.right  file-2.5.right  file.right  help.right  history.right  noscript.right  pm.right  run.right  run2.right  setshow-no-rl.right  sighandler.right  skip.right  trace-2.5.right  tracetest-2.5.right  tracetest.right  withbug-2.6.right
test/thread/: prof2.py  q.py  t2.py  test.py  thread-switch.cmd  thread1.py  tlock.py
test/unit/: .cvsignore  .gitignore  Makefile.am  bytecode.py.in  checkline.py.in  fns.py.in  listsize.py.in  pydbcmd.py.in  sighandler.py.in  test-checkline.py.in
