check_DATA = \
	brkpt1.right              \
	brkpt1t.right             \
	brkpt2-2.3.right          \
	brkpt2.right              \
	brkpt3t.right             \
	brkpt3-2.5t.right         \
	brkpt3.right              \
	checkline.py              \
	cmdparse.right            \
	contbug-2.5.right         \
	contbug.right             \
	dbgcall.right             \
	dbgcall-2.5.right         \
	file.right                \
	file-2.5.right            \
	filebug.right             \
	fntrace.right             \
	help.right                \
	history.right             \
	logging.right             \
	noscript.right            \
	pm.right                  \
	pydbrc.right              \
	run.right                 \
	run2.right                \
	save.right                \
	setshow.right             \
	setshow-no-rl.right       \
	sighandler.right          \
	skip.right                \
	step.right                \
	trace-2.4-final.right     \
	trace-2.5.right           \
	trace.right               \
	tracetest-2.4-final.right \
	tracetest-2.5.right       \
	tracetest.right           \
	withbug.right             \
	withbug-2.6.right

EXTRA_DIST = $(check_DATA)
